alignment issue fixed

--- a/css/custom.css
+++ b/css/custom.css
@@ -18,6 +18,7 @@ html,body {
   font-family: "Noto Sans JP", sans-serif !important;
   max-width: 100vw !important;
   overflow-x: hidden !important;
+  padding-top: 60px;
 }
 
 .dropdown-toggle::after {
@@ -115,8 +116,8 @@ html,body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 5rem;
-  width: 5rem;
+  height: 4.5rem;
+  width: 4.5rem;
   border-bottom-left-radius: 2rem;
   background-color: var(--bs-accent-faded);
   color: #fff;
@@ -143,4 +144,15 @@ html,body {
     font-size: 0.9rem;
     left: 18%;
   }
+}
+
+@media (max-width:767px) {
+  .reviews-card{
+    height: 300px;
+  }  
+}
+@media (max-width:576px) {
+  .reviews-card{
+    height: 315px;
+  }  
 }
